# naTERMity

./: Cargo.toml  README.md  scenes.avif
src/: main.rs  scene0.txt  scene1.txt  scene2.txt  scene3.txt
