[package]
name = "naTERMity"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "naTERMity is an animated nativity terminal screensaver"
repository = "https://github.com/torculus/naTERMity"
keywords = ["nativity", "terminal", "screensaver"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.2"
